basic structure/display for a google map

--- a/media/css/site.css
+++ b/media/css/site.css
@@ -91,3 +91,25 @@ ul.tabbernav li.tabberactive a:hover
  padding:0;
  border: 0;
 }
+
+
+/*--------------------------------------------------
+    Searchable Educator Map
+  --------------------------------------------------*/
+
+div.map-container div.search {
+    float: left;
+    width: 30%;
+}
+
+div.map-container div.map {
+    float: right;
+    width: 68%;
+}
+
+#map-canvas {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+}
