--- a/teachdentistry/templates/base.html
+++ b/teachdentistry/templates/base.html
@@ -66,23 +66,36 @@
         
             {% block primarynav %}
                 <div class="navbar" id="primarynav">
-                  <div class="navbar-inner">
-                    <div class="container">
-                      <ul class="nav">
-                          {% block primarynavtabs %}
-                            <li class="active"><a href="/one/">One</a></li>
-                						<li><a href="/two/">Two</a></li>
-                          {% endblock %}
-            		      {% block primarynavtabsextra %}{% endblock %}
-                      </ul>
-            
-                      <ul class="nav pull-right">
-                          {% block primarynavrightextra %}{% endblock %}
-        				  <li><a href="/three/">Three</a></li>
-        				  <li><a href="/four/">Four</a></li>
-                      </ul>
+                    <div class="navbar-inner">
+                        <div class="container">
+                            <ul class="nav">
+                                {% block primarynavtabs %}
+                                    {% for section in modules %}
+                                        <li class="{% ifequal section.id module.id %}active{% endifequal %}">
+                                            {% if section.locked %}
+                                                <a href="#"><i class="icon-lock"></i> {{section.label}}</a>
+                                            {% else %}{% if section.complete %}
+                                                <a href="{{section.url}}"><i class="icon-check"></i> {{section.label}}</a>
+                                            {% else %}
+                                                <a href="{{section.url}}"><i class="icon-time"></i> {{section.label}}</a>
+                                            {% endif %}{% endif %}
+                                        </li>
+                                    {% endfor %}
+                                {% endblock %}
+                            </ul>
+                            
+                            <ul class="nav pull-right">
+                                {% if can_edit %}
+                                    {% block mode-view %}{% endblock %}                                    
+                                    {% block mode-edit %}<li><a href="/edit{{section.get_absolute_url}}">Edit</a></li>{% endblock %}
+                                    
+                                    {% if instructor_link %}
+                                        <li><a href="/instructor{{request.path}}" class="btn btn-mini btn-info">responses</a></li>
+                                    {% endif %}
+                                {% endif %}
+                            </ul>
+                        </div>
                     </div>
-                  </div>
                 </div>
             {% endblock %}    
         {% endblock %}
@@ -96,6 +109,8 @@
                     <div class="span10" id="right-content">
                         {% block pagetitle %}{% endblock %}
                         {% block content %}{% endblock %}
+                        <div class="visualclear"></div>
+                        {% block content-nav %}{% endblock %}
                     </div>
                 {% endblock %}
             </div>
