--- a/teachdentistry/templates/main/edit_page.html
+++ b/teachdentistry/templates/main/edit_page.html
@@ -106,12 +106,12 @@ $(function() {
 
 {% endblock %}
 
-{% block navrightextra %}
-    <ul class="nav pull-right">
-        <li><a href="{{section.get_absolute_url}}" >view page</a></li>
-    </ul>
+{% block mode-view%}
+    <li class="active"><a href="{{section.get_absolute_url}}">View</a></li>
 {% endblock %}
 
+{% block mode-edit %}
+{% endblock %}
 
 {% block content %}
 <h1>{{ section.label }}</h1>
