--- a/teachdentistry/templates/main/menu.html
+++ b/teachdentistry/templates/main/menu.html
@@ -1,31 +1,45 @@
+{% load unlocked %}
 
 <ul>
-{% for s in module.get_descendants %}
-{% ifequal s.id module.id %}
-{% else %}
-<li class="menu-{{s.depth}}">
-  {% ifnotequal s.id section.id %}
-  <a href="{{menu_base}}{{s.get_absolute_url}}">
-  {% else %}
-  {% endifnotequal %}
-  {{s.label}}
-  {% ifnotequal s.id section.id %}
-    </a>
-  {% else %}
-  {% endifnotequal %}
-  {% if s.get_children %}
-     <ul id="section-ul-{{s.id}}">
-     {% else %}
-     {% if s.is_last_child %}
-     {% for lc in s.closing_children %}
-          </ul>
-     {% endfor %}
-{% endif %}
-{% endif %}
-{% if s.get_children %}
-{% else %}
-    </li>
-{% endif%}
-{% endifequal %}
-{% endfor %}
+    {% for s in module.get_descendants %}
+        {% ifequal s.id module.id %}
+        {% else %}
+        <li class="menu-{{s.depth}}">
+            {% ifnotequal s.id section.id %}
+                {% ifunlocked s %}
+                    <div class="regular"><a href="{{menu_base}}{{s.get_absolute_url}}">
+                {%  else %}
+                    <div class="locked">
+                {% endifunlocked %}
+            {% else %}
+                <div class="active">
+            {% endifnotequal %}
+    
+            {{s.label}}
+            
+            {% ifnotequal s.id section.id %}
+                {% ifunlocked s %}
+                    </a></div>
+                {%  else  %}
+                    </div>
+                {% endifunlocked %}
+            {% else %}
+                </div>
+            {% endifnotequal %}
+            
+            {% if s.get_children %}
+                <ul id="section-ul-{{s.id}}">
+                    {% else %}
+                    {% if s.is_last_child %}
+                        {% for lc in s.closing_children %}
+                            </ul>
+                        {% endfor %}
+                    {% endif %}
+            {% endif %}
+            {% if s.get_children %}
+            {% else %}
+                </li>
+            {% endif%}
+        {% endifequal %}
+    {% endfor %}
 </ul>
