--- a/teachdentistry/templates/admin/login.html
+++ b/teachdentistry/templates/admin/login.html
@@ -1,8 +1,7 @@
-
 {% extends "admin/base_site.html" %}
-{% load i18n %}
+{% load i18n admin_static %}
 
-{% block stylesheet %}{% load adminmedia %}{% admin_media_prefix %}css/login.css{% endblock %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/login.css" %}" />{% endblock %}
 
 {% block bodyclass %}login{% endblock %}
 
@@ -18,11 +17,11 @@
 <form method="get" action="https://wind.columbia.edu/login">
 <input type="hidden" name="service" value="cnmtl_full_np" />
 <input type="hidden" name="destination" value="http://{{ request.get_host }}/accounts/windlogin/?next=/admin/&this_is_the_login_form=1" />
-<p>If you have a Columbia UNI, you already have an account and can
-login through WIND with it</p>
-<input type="submit" value="Here" />
+<p>If you have a Columbia UNI:</p>
+<input type="submit" value="Click Here" />
 </form>
-<p>otherwise: </p>
+<br /><br /><p>Otherwise, use this form: </p>
+
 
 <form action="{{ app_path }}" method="post" id="login-form">
   <div class="form-row">
