--- a/teachdentistry/templates/main/index.html
+++ b/teachdentistry/templates/main/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="hero-unit">
-<h1>It works</h1>
-<p>Congratulations! Now start coding.</p>
+<h1>Teach Dentistry<br/>is under construction</h1>
+<p>Please pardon our appearance.</p>
 </div>
 {% endblock %}
