--- a/teachdentistry/templates/base_teachdentistry.html
+++ b/teachdentistry/templates/base_teachdentistry.html
@@ -37,7 +37,7 @@
                 <a href="/accounts/login/?next=/" class="btn btn-small btn-primary">Log in</a>
             {% else %}
                 Hello, {% if request.user.first_name %}{{request.user.first_name}}{% else %}{{request.user.username}}{% endif %}
-                <a href="/logout/" class="btn btn-small btn-danger">Log out</a>
+                <a href="/logout/" class="btn btn-mini btn-danger">Log out</a>
             {% endif %}
         {% endblock %}
         </div>
@@ -61,7 +61,7 @@
             </header>
         
             {% block primarynav %}
-                <div class="navbar" id="primarynav">
+                <div class="navbar" id="primarynav" style="margin-left: -10px;">
                     <div class="navbar-inner">
                         <div class="container">
                             <ul class="nav">
