--- a/teachdentistry/templates/registration/login.html
+++ b/teachdentistry/templates/registration/login.html
@@ -1,6 +1,12 @@
 {% extends "base_teachdentistry.html" %}
 {% block content %}
 
+<div class="hero-unit">
+<h1>Teach Dentistry<br/>is under construction</h1>
+<p>Please pardon our appearance.</p>
+</div>
+
+
 <h2>Choose a Login Option...</h2>
 
 <form method="get" action="{{ wind_base }}login" class="well">
