--- a/teachdentistry/templates/main/page.html
+++ b/teachdentistry/templates/main/page.html
@@ -36,7 +36,7 @@
 
 {% block breadcrumbs %}
 {% endblock breadcrumbs %}
-
+{% block masthead %}{% endblock %}
 {% block content %}
     <div id="content" class ="module-{{module.slug}}">
         {% if needs_submit %}
